--- a/testfile.html
+++ b/testfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Round 3</title>
+  <title>Escape Round Intro</title>
 
   <style>
     /* ===== BASE ===== */
@@ -11,39 +11,34 @@
       background: black;
       color: white;
       font-family: Arial, sans-serif;
+      overflow: hidden;
     }
 
-    /* ===== OVERLAY ===== */
+    /* ===== LOCK OVERLAY ===== */
     .lock-overlay {
       position: fixed;
       inset: 0;
       background: black;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: center;   /* CENTER OF SCREEN */
       z-index: 9999;
       overflow: hidden;
-      transition: opacity 0.6s ease;
     }
 
-    .lock-overlay.hide {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    /* ===== TRACK ===== */
+    /* ===== SCROLL TRACK ===== */
     .lock-track {
       display: flex;
-      gap: 40px;
-      transform: translateX(100vw);
-      transition: transform 2.8s cubic-bezier(0.22, 1, 0.36, 1);
+      gap: 60px;
+      transform: translateX(120vw);
+      transition: transform 3s cubic-bezier(0.22, 1, 0.36, 1);
     }
 
-    /* ===== LOCK ===== */
+    /* ===== LOCKS ===== */
     .lock {
-      width: 110px;
+      width: 170px;   /* BIGGER LOCKS */
       opacity: 0.35;
-      transition: transform 0.4s ease, opacity 0.4s ease;
+      transition: transform 0.6s ease, opacity 0.6s ease;
     }
 
     .lock.unlocked {
@@ -52,7 +47,7 @@
 
     .lock.current {
       opacity: 1;
-      transform: scale(1.15);
+      transform: scale(1.3);
     }
 
     svg {
@@ -60,15 +55,25 @@
       display: block;
     }
 
-    /* ===== PAGE CONTENT ===== */
+    /* ===== ZOOM TRANSITION ===== */
+    .zoom-out {
+      transform: scale(2);
+      transition: transform 0.9s ease;
+    }
+
+    /* ===== REAL PAGE CONTENT ===== */
     .page-content {
+      position: relative;
+      z-index: 1;
+      padding: 80px;
       opacity: 0;
-      padding: 60px;
-      transition: opacity 0.8s ease;
+      transform: scale(0.95);
+      transition: opacity 0.6s ease, transform 0.6s ease;
     }
 
     .page-content.show {
       opacity: 1;
+      transform: scale(1);
     }
   </style>
 </head>
@@ -113,12 +118,12 @@
     <div class="lock current" id="currentLock">
       <svg viewBox="0 0 120 160">
         <path d="M35 60 V35 C35 10 85 10 85 35 V60"
-              fill="none" stroke="#666" stroke-width="10"
+              fill="none" stroke="#777" stroke-width="10"
               stroke-linecap="round"/>
         <rect x="20" y="60" rx="14" ry="14"
               width="80" height="80"
-              fill="#0b0b0b" stroke="#666" stroke-width="3"/>
-        <circle cx="60" cy="100" r="18" fill="#111" stroke="#777" stroke-width="2"/>
+              fill="#0b0b0b" stroke="#777" stroke-width="3"/>
+        <circle cx="60" cy="100" r="18" fill="#111" stroke="#999" stroke-width="2"/>
         <text x="60" y="107" text-anchor="middle" font-size="18"
               fill="#ffffff" font-weight="bold">3</text>
       </svg>
@@ -145,7 +150,7 @@
 <!-- ✅ REAL PAGE CONTENT -->
 <div class="page-content" id="content">
   <h1>Round 3</h1>
-  <p>This is the actual puzzle page content.</p>
+  <p>This is the actual escape-room puzzle page.</p>
 </div>
 
 <script>
@@ -154,7 +159,7 @@
   const content = document.getElementById("content");
   const current = document.getElementById("currentLock");
 
-  // Center current lock
+  // Center the current lock
   const centerOffset =
     window.innerWidth / 2 -
     current.offsetLeft -
@@ -164,11 +169,16 @@
     track.style.transform = `translateX(${centerOffset}px)`;
   });
 
-  // Wait 1 second after scroll stops, then reveal page
+  // After scroll + 1s pause → zoom in → reveal page
   setTimeout(() => {
-    overlay.classList.add("hide");
+    overlay.classList.add("zoom-out");
+  }, 4000);
+
+  setTimeout(() => {
+    overlay.remove();
     content.classList.add("show");
-  }, 3800);
+    document.body.style.overflow = "auto";
+  }, 5000);
 </script>
 
 </body>
