--- a/testfile.html
+++ b/testfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Escape Round Intro</title>
+  <title>Escape Intro</title>
 
   <style>
     /* ===== BASE ===== */
@@ -14,31 +14,35 @@
       overflow: hidden;
     }
 
-    /* ===== LOCK OVERLAY ===== */
-    .lock-overlay {
+    /* ===== OVERLAY ===== */
+    .overlay {
       position: fixed;
       inset: 0;
       background: black;
       display: flex;
       justify-content: center;
-      align-items: center;   /* CENTER OF SCREEN */
+      align-items: center;
       z-index: 9999;
-      overflow: hidden;
+      transition: opacity 1s ease;
     }
 
-    /* ===== SCROLL TRACK ===== */
-    .lock-track {
+    .overlay.fade-out {
+      opacity: 0;
+    }
+
+    /* ===== TRACK ===== */
+    .track {
       display: flex;
-      gap: 60px;
+      gap: 70px;
       transform: translateX(120vw);
-      transition: transform 3s cubic-bezier(0.22, 1, 0.36, 1);
+      transition: transform 4s cubic-bezier(0.22, 1, 0.36, 1);
     }
 
-    /* ===== LOCKS ===== */
+    /* ===== LOCK ===== */
     .lock {
-      width: 170px;   /* BIGGER LOCKS */
-      opacity: 0.35;
-      transition: transform 0.6s ease, opacity 0.6s ease;
+      width: 180px;
+      opacity: 0.25;
+      transition: opacity 0.8s ease;
     }
 
     .lock.unlocked {
@@ -47,7 +51,6 @@
 
     .lock.current {
       opacity: 1;
-      transform: scale(1.3);
     }
 
     svg {
@@ -55,130 +58,140 @@
       display: block;
     }
 
-    /* ===== ZOOM TRANSITION ===== */
-    .zoom-out {
-      transform: scale(2);
-      transition: transform 0.9s ease;
+    /* ===== CAMERA ZOOM ===== */
+    .zoom {
+      transform: scale(3);
+      transition: transform 2s ease;
     }
 
-    /* ===== REAL PAGE CONTENT ===== */
-    .page-content {
-      position: relative;
-      z-index: 1;
-      padding: 80px;
+    /* ===== PAGE CONTENT ===== */
+    .page {
       opacity: 0;
-      transform: scale(0.95);
-      transition: opacity 0.6s ease, transform 0.6s ease;
+      padding: 80px;
+      transition: opacity 1s ease;
     }
 
-    .page-content.show {
+    .page.show {
       opacity: 1;
-      transform: scale(1);
     }
   </style>
 </head>
 
 <body>
 
-<!-- 🔒 LOCK INTRO OVERLAY -->
-<div class="lock-overlay" id="overlay">
-  <div class="lock-track" id="track">
+<!-- 🔒 CINEMATIC INTRO -->
+<div class="overlay" id="overlay">
+  <div class="track" id="track">
 
     <!-- R1 -->
     <div class="lock unlocked">
       <svg viewBox="0 0 120 160">
-        <path d="M35 60 V35 C35 10 85 10 85 35 V60"
-              fill="none" stroke="#444" stroke-width="10"
+        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
+              fill="none" stroke="#555" stroke-width="12"
               stroke-linecap="round"/>
-        <rect x="20" y="60" rx="14" ry="14"
-              width="80" height="80"
-              fill="#0b0b0b" stroke="#444" stroke-width="3"/>
-        <circle cx="60" cy="100" r="18" fill="#111" stroke="#555" stroke-width="2"/>
-        <text x="60" y="107" text-anchor="middle" font-size="18"
-              fill="#e5e7eb" font-weight="bold">1</text>
+        <rect x="18" y="60" width="84" height="86" rx="16"
+              fill="#0a0a0a" stroke="#555" stroke-width="4"/>
+        <circle cx="60" cy="102" r="20"
+                fill="#000" stroke="#666" stroke-width="3"/>
+        <text x="60" y="110" text-anchor="middle"
+              font-size="20" fill="#aaa" font-weight="bold">1</text>
       </svg>
     </div>
 
     <!-- R2 -->
     <div class="lock unlocked">
       <svg viewBox="0 0 120 160">
-        <path d="M35 60 V35 C35 10 85 10 85 35 V60"
-              fill="none" stroke="#444" stroke-width="10"
+        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
+              fill="none" stroke="#555" stroke-width="12"
               stroke-linecap="round"/>
-        <rect x="20" y="60" rx="14" ry="14"
-              width="80" height="80"
-              fill="#0b0b0b" stroke="#444" stroke-width="3"/>
-        <circle cx="60" cy="100" r="18" fill="#111" stroke="#555" stroke-width="2"/>
-        <text x="60" y="107" text-anchor="middle" font-size="18"
-              fill="#e5e7eb" font-weight="bold">2</text>
+        <rect x="18" y="60" width="84" height="86" rx="16"
+              fill="#0a0a0a" stroke="#555" stroke-width="4"/>
+        <circle cx="60" cy="102" r="20"
+                fill="#000" stroke="#666" stroke-width="3"/>
+        <text x="60" y="110" text-anchor="middle"
+              font-size="20" fill="#aaa" font-weight="bold">2</text>
       </svg>
     </div>
 
     <!-- R3 (CURRENT) -->
-    <div class="lock current" id="currentLock">
+    <div class="lock current" id="current">
       <svg viewBox="0 0 120 160">
-        <path d="M35 60 V35 C35 10 85 10 85 35 V60"
-              fill="none" stroke="#777" stroke-width="10"
+        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
+              fill="none" stroke="#777" stroke-width="12"
               stroke-linecap="round"/>
-        <rect x="20" y="60" rx="14" ry="14"
-              width="80" height="80"
-              fill="#0b0b0b" stroke="#777" stroke-width="3"/>
-        <circle cx="60" cy="100" r="18" fill="#111" stroke="#999" stroke-width="2"/>
-        <text x="60" y="107" text-anchor="middle" font-size="18"
-              fill="#ffffff" font-weight="bold">3</text>
+        <rect x="18" y="60" width="84" height="86" rx="16"
+              fill="#0a0a0a" stroke="#777" stroke-width="4"/>
+        <circle cx="60" cy="102" r="20"
+                fill="#000" stroke="#888" stroke-width="3"/>
+        <text x="60" y="110" text-anchor="middle"
+              font-size="20" fill="#fff" font-weight="bold">3</text>
       </svg>
     </div>
 
     <!-- R4 -->
     <div class="lock">
       <svg viewBox="0 0 120 160">
-        <path d="M35 60 V35 C35 10 85 10 85 35 V60"
-              fill="none" stroke="#444" stroke-width="10"
+        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
+              fill="none" stroke="#444" stroke-width="12"
               stroke-linecap="round"/>
-        <rect x="20" y="60" rx="14" ry="14"
-              width="80" height="80"
-              fill="#0b0b0b" stroke="#444" stroke-width="3"/>
-        <circle cx="60" cy="100" r="18" fill="#111" stroke="#555" stroke-width="2"/>
-        <text x="60" y="107" text-anchor="middle" font-size="18"
-              fill="#e5e7eb" font-weight="bold">4</text>
+        <rect x="18" y="60" width="84" height="86" rx="16"
+              fill="#0a0a0a" stroke="#444" stroke-width="4"/>
+        <circle cx="60" cy="102" r="20"
+                fill="#000" stroke="#555" stroke-width="3"/>
+        <text x="60" y="110" text-anchor="middle"
+              font-size="20" fill="#666" font-weight="bold">4</text>
       </svg>
     </div>
 
   </div>
 </div>
 
-<!-- ✅ REAL PAGE CONTENT -->
-<div class="page-content" id="content">
+<!-- ✅ REAL PAGE -->
+<div class="page" id="page">
   <h1>Round 3</h1>
-  <p>This is the actual escape-room puzzle page.</p>
+  <p>Your escape-room content starts here.</p>
 </div>
 
 <script>
   const track = document.getElementById("track");
+  const current = document.getElementById("current");
   const overlay = document.getElementById("overlay");
-  const content = document.getElementById("content");
-  const current = document.getElementById("currentLock");
+  const page = document.getElementById("page");
 
-  // Center the current lock
-  const centerOffset =
+  // Scroll past current lock
+  const offset =
     window.innerWidth / 2 -
     current.offsetLeft -
-    current.offsetWidth / 2;
+    current.offsetWidth * 1.5;
 
   requestAnimationFrame(() => {
-    track.style.transform = `translateX(${centerOffset}px)`;
+    track.style.transform = `translateX(${offset}px)`;
   });
 
-  // After scroll + 1s pause → zoom in → reveal page
+  // Unlock previous locks during scroll
   setTimeout(() => {
-    overlay.classList.add("zoom-out");
-  }, 4000);
+    document.querySelectorAll(".lock").forEach(l => {
+      if (!l.classList.contains("current")) {
+        l.classList.add("unlocked");
+      }
+    });
+  }, 1800);
+
+  // Camera zoom to black
+  setTimeout(() => {
+    overlay.classList.add("zoom");
+  }, 4200);
+
+  // Fade to page
+  setTimeout(() => {
+    overlay.classList.add("fade-out");
+    page.classList.add("show");
+  }, 5600);
 
   setTimeout(() => {
     overlay.remove();
-    content.classList.add("show");
     document.body.style.overflow = "auto";
-  }, 5000);
+  }, 6600);
 </script>
 
 </body>
