--- a/testfile.html
+++ b/testfile.html
@@ -1,152 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Escape Intro</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lock Sequence Animation</title>
+    <style>
+        :root {
+            --bg-color: #0f172a;
+            --lock-color: #f1f5f9;
+            --unlocked-color: #10b981;
+            --chosen-color: #f59e0b;
+            --transition-speed: 0.8s;
+        }
 
-<style>
-body {
-  margin: 0;
-  background: black;
-  font-family: Arial, sans-serif;
-  overflow: hidden;
-}
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--bg-color);
+            color: white;
+            font-family: 'Segoe UI', sans-serif;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-}
-.overlay.fade {
-  opacity: 0;
-  transition: opacity 0.8s ease;
-}
+        /* The viewport limits what we see */
+        #viewport {
+            width: 100vw;
+            height: 100vh;
+            position: relative;
+            display: flex;
+            align-items: center;
+            overflow: hidden;
+        }
 
+        /* The long track of locks */
+        #lock-track {
+            display: flex;
+            gap: 100px;
+            padding: 0 50vw; /* Start from center */
+            transition: transform 3s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+        }
 
-.track {
-  display: flex;
-  gap: 80px;
-  transform: translateX(120vw);
-  transition: transform 3.2s cubic-bezier(0.22, 1, 0.36, 1);
-}
+        /* Individual Lock Styling */
+        .lock-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transition: all var(--transition-speed) ease;
+        }
 
-.lock {
-  width: 170px;
-  opacity: 0.25;
-  transition: opacity 0.6s ease;
-}
+        .lock-body {
+            width: 80px;
+            height: 70px;
+            background: var(--lock-color);
+            border-radius: 10px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #1e293b;
+            font-weight: bold;
+            font-size: 1.5rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.5);
+            z-index: 2;
+        }
 
-.lock.unlocked {
-  opacity: 0.4;
-}
+        .shackle {
+            width: 60px;
+            height: 50px;
+            border: 8px solid #94a3b8;
+            border-bottom: none;
+            border-radius: 30px 30px 0 0;
+            position: absolute;
+            top: -40px;
+            transition: transform 0.5s ease;
+            z-index: 1;
+        }
 
-.lock.current {
-  opacity: 1;
-}
+        /* Unlocked State */
+        .unlocked .shackle {
+            transform: translateY(-20px) rotate(-15deg);
+            border-color: var(--unlocked-color);
+        }
+        .unlocked .lock-body {
+            border: 2px solid var(--unlocked-color);
+        }
 
-.overlay {
-  transition: opacity 0.8s ease, transform 1.6s ease;
-}
+        /* Chosen/Illuminated State */
+        .chosen .lock-body {
+            background: var(--chosen-color);
+            box-shadow: 0 0 30px var(--chosen-color);
+            transform: scale(1.1);
+        }
 
-.overlay.zoom {
-  transform: scale(3);
-}
+        /* Zoom Effect */
+        .zoom-active .chosen {
+            transform: scale(30); /* Zoom into the lock */
+            opacity: 0;
+            transition: transform 1.5s ease-in, opacity 0.5s 1s;
+        }
 
+        /* Final Content Reveal */
+        #content-page {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            visibility: hidden;
+            background: white;
+            color: black;
+            transition: opacity 1s ease;
+            z-index: 10;
+        }
 
-svg {
-  width: 100%;
-  display: block;
-}
-
-.page {
-  opacity: 0;
-  padding: 80px;
-  color: white;
-  transition: opacity 1s ease;
-}
-
-.page.show {
-  opacity: 1;
-}
-</style>
+        .show-content #content-page {
+            opacity: 1;
+            visibility: visible;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="overlay" id="overlay">
-  <div class="track" id="track">
-
-    <!-- R1 -->
-    <div class="lock" data-index="0">
-      <svg viewBox="0 0 120 160">
-        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
-              fill="none" stroke="#666" stroke-width="12"
-              stroke-linecap="round"/>
-        <rect x="18" y="60" width="84" height="86" rx="16"
-              fill="#0a0a0a" stroke="#666" stroke-width="4"/>
-        <circle cx="60" cy="102" r="20"
-                fill="#000" stroke="#666" stroke-width="3"/>
-        <text x="60" y="110" text-anchor="middle"
-              font-size="20" fill="#777" font-weight="bold">1</text>
-      </svg>
+    <div id="viewport">
+        <div id="lock-track">
+            </div>
     </div>
 
-    <!-- R2 -->
-    <div class="lock" data-index="1">
-      <svg viewBox="0 0 120 160">
-        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
-              fill="none" stroke="#666" stroke-width="12"
-              stroke-linecap="round"/>
-        <rect x="18" y="60" width="84" height="86" rx="16"
-              fill="#0a0a0a" stroke="#666" stroke-width="4"/>
-        <circle cx="60" cy="102" r="20"
-                fill="#000" stroke="#666" stroke-width="3"/>
-        <text x="60" y="110" text-anchor="middle"
-              font-size="20" fill="#777" font-weight="bold">2</text>
-      </svg>
+    <div id="content-page">
+        <h1>Access Granted</h1>
+        <p>You have reached the destination.</p>
+        <button onclick="location.reload()">Start Over</button>
     </div>
 
-    <!-- R3 (CURRENT) -->
-    <div class="lock current" id="current" data-index="2">
-      <svg viewBox="0 0 120 160">
-        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
-              fill="none" stroke="#666" stroke-width="12"
-              stroke-linecap="round"/>
-        <rect x="18" y="60" width="84" height="86" rx="16"
-              fill="#0a0a0a" stroke="#666" stroke-width="4"/>
-        <circle cx="60" cy="102" r="20"
-                fill="#000" stroke="#666" stroke-width="3"/>
-        <text x="60" y="110" text-anchor="middle"
-              font-size="20" fill="#777" font-weight="bold">3</text>
-      </svg>
-    </div>
+    <script>
+        const track = document.getElementById('lock-track');
+        const viewport = document.getElementById('viewport');
+        const totalLocks = 15;
+        const chosenIndex = 10; // The 11th lock (0-based) is the one we zoom into
 
-    <!-- R4 -->
-    <div class="lock" data-index="3">
-      <svg viewBox="0 0 120 160">
-        <path d="M30 60 V38 C30 8 90 8 90 38 V60"
-              fill="none" stroke="#666" stroke-width="12"
-              stroke-linecap="round"/>
-        <rect x="18" y="60" width="84" height="86" rx="16"
-              fill="#0a0a0a" stroke="#666" stroke-width="4"/>
-        <circle cx="60" cy="102" r="20"
-                fill="#000" stroke="#666" stroke-width="3"/>
-        <text x="60" y="110" text-anchor="middle"
-              font-size="20" fill="#777" font-weight="bold">4</text>
-      </svg>
-    </div>
+        // 1. Create the locks
+        for (let i = 0; i < totalLocks; i++) {
+            const wrapper = document.createElement('div');
+            wrapper.classList.add('lock-wrapper');
+            if (i < chosenIndex) wrapper.classList.add('unlocked');
+            if (i === chosenIndex) wrapper.id = 'target-lock';
 
-  </div>
-</div>
+            wrapper.innerHTML = `
+                <div class="shackle"></div>
+                <div class="lock-body">${i + 1}</div>
+            `;
+            track.appendChild(wrapper);
+        }
 
-<div class="page" id="page">
-  <h1>Round 3</h1>
-  <p>Your puzzle content starts here.</p>
-</div>
+        // 2. Start Animation Sequence
+        window.onload = () => {
+            setTimeout(() => {
+                // Scroll to the chosen lock
+                // Calculation: (lock width 80 + gap 100) * index
+                const offset = chosenIndex * 180;
+                track.style.transform = `translateX(-${offset}px)`;
 
-<script>
-const track = document.getElementById("track");
+                // 3. Highlight after scroll finishes
+                setTimeout(() => {
+                    const target = document.getElementById('target-lock');
+                    target.classList.add('chosen');
+
+                    // 4. Zoom in
+                    setTimeout(() => {
+                        viewport.classList.add('zoom-active');
+                        
+                        // 5. Reveal page
+                        setTimeout(() => {
+                            document.body.classList.add('show-content');
+                        }, 1200);
+
+                    }, 1000);
+                }, 3000); // Wait for scroll animation to end
+            }, 500);
+        };
+    </script>
+</body>
+</html>
