--- a/testfile.html
+++ b/testfile.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lock Sequence Animation</title>
+    <title>Door Portal Transition</title>
     <style>
         :root {
-            --bg-color: #0f172a;
-            --lock-color: #f1f5f9;
-            --unlocked-color: #10b981;
-            --chosen-color: #f59e0b;
-            --transition-speed: 0.8s;
+            --bg-color: #000000;
+            --door-color: #e0e0e0; /* Off-white/light grey like your image */
+            --zoom-speed: 2.5s;
         }
 
         body, html {
@@ -19,175 +17,126 @@
             width: 100%;
             height: 100%;
             background-color: var(--bg-color);
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            perspective: 1200px; /* Essential for the 3D door swing */
+        }
+
+        /* The page content waiting behind the door */
+        #page-content {
+            position: absolute;
+            opacity: 0;
+            text-align: center;
             color: white;
             font-family: 'Segoe UI', sans-serif;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* The viewport limits what we see */
-        #viewport {
-            width: 100vw;
-            height: 100vh;
-            position: relative;
-            display: flex;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        /* The long track of locks */
-        #lock-track {
-            display: flex;
-            gap: 100px;
-            padding: 0 50vw; /* Start from center */
-            transition: transform 3s cubic-bezier(0.45, 0.05, 0.55, 0.95);
-        }
-
-        /* Individual Lock Styling */
-        .lock-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            transition: all var(--transition-speed) ease;
-        }
-
-        .lock-body {
-            width: 80px;
-            height: 70px;
-            background: var(--lock-color);
-            border-radius: 10px;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #1e293b;
-            font-weight: bold;
-            font-size: 1.5rem;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.5);
-            z-index: 2;
-        }
-
-        .shackle {
-            width: 60px;
-            height: 50px;
-            border: 8px solid #94a3b8;
-            border-bottom: none;
-            border-radius: 30px 30px 0 0;
-            position: absolute;
-            top: -40px;
-            transition: transform 0.5s ease;
+            transition: opacity 1s ease-in;
             z-index: 1;
         }
 
-        /* Unlocked State */
-        .unlocked .shackle {
-            transform: translateY(-20px) rotate(-15deg);
-            border-color: var(--unlocked-color);
-        }
-        .unlocked .lock-body {
-            border: 2px solid var(--unlocked-color);
-        }
-
-        /* Chosen/Illuminated State */
-        .chosen .lock-body {
-            background: var(--chosen-color);
-            box-shadow: 0 0 30px var(--chosen-color);
-            transform: scale(1.1);
+        .scene-container {
+            display: flex;
+            gap: 80px;
+            align-items: flex-end;
+            z-index: 10;
+            transform-style: preserve-3d;
+            /* Auto-trigger the zoom animation on load */
+            animation: zoomThrough var(--zoom-speed) forwards cubic-bezier(0.4, 0, 0.2, 1);
+            animation-delay: 0.5s; 
         }
 
-        /* Zoom Effect */
-        .zoom-active .chosen {
-            transform: scale(30); /* Zoom into the lock */
-            opacity: 0;
-            transition: transform 1.5s ease-in, opacity 0.5s 1s;
+        /* Door Frame/Structure */
+        .door-frame {
+            width: 120px;
+            height: 220px;
+            background: transparent;
+            position: relative;
+            transform-style: preserve-3d;
         }
 
-        /* Final Content Reveal */
-        #content-page {
-            position: absolute;
-            top: 0;
-            left: 0;
+        /* The Door Leaf */
+        .door {
             width: 100%;
             height: 100%;
+            background-color: var(--door-color);
+            position: absolute;
+            transform-origin: left; /* Hinges on the left */
+            transition: transform 1.5s ease-in-out;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            opacity: 0;
-            visibility: hidden;
-            background: white;
-            color: black;
-            transition: opacity 1s ease;
-            z-index: 10;
+            box-shadow: inset -2px 0 5px rgba(0,0,0,0.1);
         }
 
-        .show-content #content-page {
-            opacity: 1;
-            visibility: visible;
+        /* The Door Handle */
+        .handle {
+            width: 15px;
+            height: 4px;
+            background: #222;
+            position: absolute;
+            right: 10px;
+            border-radius: 2px;
         }
+
+        /* Target Door Specifics */
+        .target-door .door {
+            /* Animation for the door opening */
+            animation: openDoor 1.5s forwards;
+            animation-delay: 1s;
+        }
+
+        /* Animations */
+        @keyframes zoomThrough {
+            0% { transform: translateZ(0); opacity: 1; }
+            70% { opacity: 1; }
+            100% { transform: translateZ(2000px); opacity: 0; }
+        }
+
+        @keyframes openDoor {
+            0% { transform: rotateY(0deg); }
+            100% { transform: rotateY(-110deg); }
+        }
+
+        /* Reveal the content as we pass through */
+        .reveal-content {
+            animation: fadeIn 1s forwards;
+            animation-delay: 2s;
+        }
+
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+
     </style>
 </head>
 <body>
 
-    <div id="viewport">
-        <div id="lock-track">
-            </div>
+    <div id="page-content">
+        <h1 style="font-size: 3rem;">WELCOME</h1>
+        <p>You have entered the next page.</p>
     </div>
 
-    <div id="content-page">
-        <h1>Access Granted</h1>
-        <p>You have reached the destination.</p>
-        <button onclick="location.reload()">Start Over</button>
+    <div class="scene-container">
+        <div class="door-frame">
+            <div class="door"><div class="handle"></div></div>
+        </div>
+
+        <div class="door-frame target-door">
+            <div class="door"><div class="handle"></div></div>
+        </div>
+
+        <div class="door-frame">
+            <div class="door"><div class="handle"></div></div>
+        </div>
     </div>
 
     <script>
-        const track = document.getElementById('lock-track');
-        const viewport = document.getElementById('viewport');
-        const totalLocks = 15;
-        const chosenIndex = 10; // The 11th lock (0-based) is the one we zoom into
-
-        // 1. Create the locks
-        for (let i = 0; i < totalLocks; i++) {
-            const wrapper = document.createElement('div');
-            wrapper.classList.add('lock-wrapper');
-            if (i < chosenIndex) wrapper.classList.add('unlocked');
-            if (i === chosenIndex) wrapper.id = 'target-lock';
-
-            wrapper.innerHTML = `
-                <div class="shackle"></div>
-                <div class="lock-body">${i + 1}</div>
-            `;
-            track.appendChild(wrapper);
-        }
-
-        // 2. Start Animation Sequence
-        window.onload = () => {
+        // Automatically set the content to reveal after the zoom completes
+        window.addEventListener('load', () => {
             setTimeout(() => {
-                // Scroll to the chosen lock
-                // Calculation: (lock width 80 + gap 100) * index
-                const offset = chosenIndex * 180;
-                track.style.transform = `translateX(-${offset}px)`;
-
-                // 3. Highlight after scroll finishes
-                setTimeout(() => {
-                    const target = document.getElementById('target-lock');
-                    target.classList.add('chosen');
-
-                    // 4. Zoom in
-                    setTimeout(() => {
-                        viewport.classList.add('zoom-active');
-                        
-                        // 5. Reveal page
-                        setTimeout(() => {
-                            document.body.classList.add('show-content');
-                        }, 1200);
-
-                    }, 1000);
-                }, 3000); // Wait for scroll animation to end
+                document.getElementById('page-content').classList.add('reveal-content');
             }, 500);
-        };
+        });
     </script>
 </body>
 </html>
