--- a/compdets.html
+++ b/compdets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -35,7 +35,7 @@
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
       <aside id="colorlib-aside" role="complementary" class="js-fullheight">
         <h1 id="colorlib-logo" class="mb-4 mb-md-5">
-          <a href="index.html" style="background-color: white">KL-CC</a>
+          <a href="index.html" style="background-color: white">KLCC</a>
         </h1>
         <nav id="colorlib-main-menu" role="navigation">
           <ul>
@@ -62,7 +62,7 @@
             </li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
@@ -71,9 +71,9 @@
             <div style="padding-left: 5rem; padding-right: 5rem; padding-top: 2rem; padding-bottom: 0.5rem;">
                 <h1 class="colorlib-heading">Rules & Guidelines</h1>
                 <p style="color: #fff;">
-                  The prefects behind the KL Coding Cup 2025 will attempt their best at maintaining integrity and fair and clean competition, to ensure this the competitors must follow the rules and guideliens:
+                  The prefects behind the KL Coding Cup 2026 will attempt their best at maintaining integrity and fair and clean competition, to ensure this the competitors must follow the rules and guideliens:
                   <ul style="color: #fff;">
-                    <li><p>AI chatbots such as DeepSeek, GitHub Copilot or ChatGPT are discouraged, as all teams are required to make the small intuitive leaps to answer difficult questions, on their own. </p></li>
+                    <li><p>AI chatbots such as DeepSeek, GitHub Copilot or ChatGPT are not allowed, as all teams are required to make the small intuitive leaps to answer difficult questions on their own. </p></li>
                     <li><p>Misconduct with other teams is prohibited. This includes answer sharing between same school teams, and general bad manners towards any team. 
                     <li><p>Searching the internet for issues is allowed. Stack Overflow usage will be allowed during the competition, but do not copy and paste code to get your answers. We will know.</p></li>
                     </p></li>
@@ -95,37 +95,37 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>9:30 - 10:00</td>
+                    <td>9:30 - 9:50</td>
                     <td>Participants Arrive</td>
                     <td>
                       The event will be held in the Main Hall. All competitors will be registered at the Hub. 
                     </td>
                   </tr>
                   <tr>
-                    <td>10:00 - 10:15</td>
+                    <td>9:50 - 10:00</td>
                     <td>Opening Ceremony</td>
                     <td>Competitors will be briefed on the rules, expectaitons and strucutre of the competition - Main Hall</td>
                   </tr>
                   <tr>
-                    <td>10:15 - 11:15</td>
+                    <td>10:00 - 11:00</td>
                     <td>Speed Round</td>
                     <td>Competitors will compete for points in the speed round section of the competition - Main Hall</td>
                   </tr>
                   <tr>
-                    <td>11:15 - 12:15</td>
-                    <td>Murder Mystery 1</td>
-                    <td>The first part of the Murder Mystery will be completed in this section. - Main Hall</td>
+                    <td>11:00 - 12:00</td>
+                    <td>Escape Room Part 1</td>
+                    <td>The first part of the Escape Room will be completed in this section. - Main Hall</td>
                   </tr>
                   <tr>
-                    <td>12:15 - 12:45</td>
+                    <td>12:00 - 12:30</td>
                     <td>Lunch Break</td>
                     <td>Main Hall</td>
                   </tr>
                   <tr>
-                    <td>12:45 - 1:45</td>
-                    <td>Murder Mystery 2</td>
+                    <td>12:30 - 1:45</td>
+                    <td>Escape Room Part 2</td>
                     <td>
-                      The second part of the Murder Mystery will be completed in this section - Main Hall
+                      The second part of the Escape Room will be completed in this section - Main Hall
                     </td>
                   </tr>
                   <tr>
