--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>  
+    <title>KL Coding Cup</title>  
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -44,12 +44,12 @@
             <li>
               <h3><a href="compdets.html">Competition Details</a></h3>
             </li>
-            <li><h3><a href="past_content.html">Murder Mystery Round</a></h3></li>
+            <li><h3><a href="past_content.html">Est Round</a></h3></li>
             <li><h3><a href="about.html">About</a></h3></li>
             <li></li>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
@@ -78,7 +78,7 @@
                           <div class="top">
                             <span class="subheading">Speed Round</span>
                             <h2 class="mb-4">
-                              <a href="single.html">KL Coding Cup 2025</a>
+                              <a href="single.html">KL Coding Cup 2026</a>
                             </h2>
                           </div>
                           <div class="absolute">
