Update title and team member names in about.html

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>KL-Coding Cup</title>
+    <title>KL Coding Cup</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -52,7 +52,7 @@
               </li>
 
               <li>
-                <h3><a href="past_content.html">Murder Mystery Round</a></h3>
+                <h3><a href="past_content.html">Escape Room Round</a></h3>
               </li>
               <li>
                 <h3><a href="about.html">About</a></h3>
@@ -63,7 +63,7 @@
             </ul>
           </ul>
           <h3 style="padding-top: 100%">
-            <a href="https://github.com/asian-mario">Made By: Rangga & Aniish</a>
+            <a href="https://github.com/asian-mario">Made By: Rangga & Awab</a>
           </h3>
         </nav>
       </aside>
@@ -95,7 +95,7 @@
                   </h2>
                   <p style="padding-bottom: 0.5rem; color: #fff">
                     We are the Alice Smith Maths & Computer Science prefect team
-                    of 2024-25. Our mission is to inspire more international
+                    of 2025-26. Our mission is to inspire more international
                     school students, of all ages, across Kuala Lumpur to engage
                     in problem solving through hosting Maths / Computer Science
                     competitions. 
@@ -104,7 +104,7 @@
                     About the KL Coding Cup
                   </h1>
                   <p style="padding-bottom: 1rem; color: #fff">
-                    Unlike every other coding cup hosted, KL Coding Cup 2025 @ KLASS will be a mixture of both physical and classical algorithmic thinking, we have a fusion of quick paced problem solving and detailed, implemented scenarios where algorithmic problem solving is crucial. Beware! Not every question is trial and error as some may lead to a deduction of points and may even lead to a negative score!
+                    Unlike every other coding cup hosted, KL Coding Cup 2026 @ KLASS will be a mixture of both physical and classical algorithmic thinking, we have a fusion of quick paced problem solving and detailed, implemented scenarios where algorithmic problem solving is crucial. Beware! Not every question is trial and error as some may lead to a deduction of points and may even lead to a negative score!
                   </p>
 
                   <div class="team-wrap row mt-2">
@@ -116,7 +116,7 @@
                         class="img"
                         style="background-image: url(images/SAKH.jpg)"
                       ></div>
-                      <h3>Saksham Chouksey</h3>
+                      <h3>Danish Asokumaran</h3>
                       <span>Head Prefect</span>
                     </div>
                     <div class="col-md-custom team">
@@ -124,7 +124,7 @@
                         class="img"
                         style="background-image: url(images/zn.JPG)"
                       ></div>
-                      <h3>Zhang Ning</h3>
+                      <h3>Eeshi Ahana Das</h3>
                       <span>Head Prefect</span>
                     </div>
                     <div class="col-md-custom team">
@@ -168,7 +168,7 @@
                         style="background-image: url(images/daryl.jpg)"
                       ></div>
                       <h3>Daryl Lee</h3>
-                      <span>Y11 Prefect</span>
+                      <span>Y12 Prefect</span>
                     </div>
                     <div class="col-md-custom team">
                       <div
