Change title and description for debugging question

--- a/single.html
+++ b/single.html
@@ -96,16 +96,15 @@
                   style="padding-top: 20px; padding-bottom: 2rem"
                 >
                   <div class="square">
-                    <h2>Two Sum : Missing Evidence</h2>
+                    <h2>Debugging Questions</h2>
 
                     <p>
-                      The evidence locker is in disarray, with items scattered everywhere. Somewhere in the chaos are two items that, when combined, unlock a critical clue. Quickly find the two items
- whose combined weight equals the target value! <br /><br />
+                      There are a lot of bugs in this code! Figure out the issues and gain points!<br /><br />
 
                       Difficulty:
                       <b>Trivial</b>
                     </p>
-                    <a href="q1.html" class="btn btn-disabled">Question</a>
+                    <a href="codeissues.html" class="btn btn-disabled">Question</a>
                   
                   </div>
                   <div class="square">
