--- a/single.html
+++ b/single.html
@@ -111,7 +111,7 @@
                       Difficulty: <b>Easy</b>
                     </p>
 
-                    <a href="q1.html" class="btn btn-disabled">Question</a>
+                    <a href="q1.html" class="btn btn-primary">Question</a>
                   
                   </div>
 
