--- a/single.html
+++ b/single.html
@@ -101,7 +101,7 @@
                     <p>
                       There are a lot of bugs in this code! Figure out the issues and gain points!<br /><br />
                     </p>
-                    <a href="codeissues.html" class="btn btn-disabled">Question</a>
+                    <a href="codeissues.html" class="btn btn-primary">Question</a>
                   
                   </div>
                   <div class="square">
