Finished speed round header page

--- a/single.html
+++ b/single.html
@@ -124,7 +124,7 @@
 
                     <a
                       href="q2.html"
-                      class="btn btn-disabled"
+                      class="btn btn-primary"
                       >Question</a
                     >
                   
@@ -140,7 +140,7 @@
                         >Moderate/Medium</b
                       >
                     </p>
-                    <a href="./q3.html" class="btn btn-disabled"
+                    <a href="./q3.html" class="btn btn-primary"
                       >Question</a
                     >
                   </div>
@@ -158,11 +158,11 @@
                       </ul>
                       
                       Difficulty:
-                      <b>Hard</b>
+                      <b>Moderate</b>
                     </p>
                     <a
                       href="./q4.html"
-                      class="btn btn-disabled"
+                      class="btn btn-primary"
                       >Question</a
                     >
                   </div>
@@ -170,7 +170,7 @@
                     <h2>Good mood</h2>
                     <p style="padding-bottom: 0%">
                       The stress of being on the team is taking a toll. Each day, your mood fluctuates wildly. Some days are great, and others are filled with despair. Track the longest streak of "good mood days" to determine when you're most effective.<br /><br />
-                      Input is denoted by an array <b>D</b>
+                      Input is denoted by an array of integers <b>M</b>.
                       <ul>
                         <li>Each integer represents your mood score for a particular day: positive values are good days, and negative values are bad days.</li>
                         <li>Your task is to find the maximum consecutive sum</li>
@@ -181,50 +181,42 @@
                         >Hard</b
                       >
                     </p>
-                    <a href="./q5.html" class="btn btn-disabled"
+                    <a href="./q5.html" class="btn btn-primary"
                       >Question</a
                     >
                   </div>
                   <div class="square">
-                    <h2>The Sequence Riddle</h2>
+                    <h2>Zero Sum</h2>
                     <p style="padding-bottom: 0%">
-                      The mastermind has left behind a series of encoded numbers. Intelligence suggests these numbers form a sequence with hidden meaning <br /><br />
-
-                      Input is denoted by a list of integers nums
+                      Input is denoted by an array of integers <b>N</b>.
                       <ul>
-                        <li>Your task is to find the length of the longest subsequence that is strictly increasing.</li>
-                        <li>A subsequence is a sequence derived from the input array by deleting some or no elements without changing the order of the remaining elements.
-                          For example, given nums = [10, 9, 2, 5, 3, 7, 101, 18], the LIS is [2, 3, 7, 101] with a length of 4.</li>
+                        <li>Your task is to find the length of the longest contiguous subarray such that its sum is 0.</li>
+                        <li>A contiguous subarray is a sequence of elements in an array that are adjacent to each other, e.g. in [1,2,3,4,5] one possible contiguous subarray is [1,2,3] or [2,3,4]</li>
                       </ul>
                       Difficulty:
                       <b
                         >Hard</b
                       >
                     </p>
-                    <a href="./q7.html" class="btn btn-disabled"
+                    <a href="./q6.html" class="btn btn-primary"
                       >Question</a
                     >
                   </div>
                   <div class="square">
-                    <h2>Market Interception</h2>
+                    <h2>Palindromic addition</h2>
                     <p style="padding-bottom: 0%">
-                      The criminal syndicate is profiting from a volatile artifact trading market. Your mission is to determine the perfect time to buy low and sell high to intercept the syndicate's profits. <br /><br />
-
-                      Input is denoted by a list of integers `prices`.  
+                      Input is denoted by an array of integers <b>P</b>.  
                       <ul>
-                        <li>Each integer represents the price of the artifact on a given day.</li>
-                        <li>Your task is to maximize profit by choosing one day to buy and one day to sell, ensuring the buying day comes before the selling day.  
-                          If no profit can be made, return `0`.  
-                          For example, given `prices = [7, 1, 5, 3, 6, 4]`, buy on day 2 (price = 1) and sell on day 5 (price = 6), yielding a profit of `6 - 1 = 5`.</li>
+                        <li>Your task is to find the largest palindromic number that can be made by adding (NOT CONCATENATING) the numbers in the given array.</li>
                       </ul>
                       <br>
-                      <p>WARNING! This question deducts 60 points for any wrong attempt!</p>
+                      <p>WARNING! This question deducts 2 points for any wrong attempt!</p>
                       Difficulty:
                       <b
-                        >Hard</b
+                        >Very hard</b
                       >
                     </p>
-                    <a href="./q8.html" class="btn btn-disabled"
+                    <a href="./q7.html" class="btn btn-primary"
                       >Question</a
                     >
                   </div>
