--- a/single.html
+++ b/single.html
@@ -203,6 +203,23 @@
                     >
                   </div>
                   <div class="square">
+                    <h2>Tuple Checking</h2>
+                    <p style="padding-bottom: 0%">
+                      Input is denoted by an array of integers <b>A</b>.  
+                      <ul>
+                        <li>Your task is to find the number of tuples of 4 distinct indices (i,j,k,l) such that (A<sub>i</sub>,A<sub>j</sub>,A<sub>k</sub>,A<sub>l</sub>) = (Q,U,A,D)</li>
+                      </ul>
+                      <p>WARNING! This question deducts 50 points for any wrong attempt!</p>
+                      Difficulty:
+                      <b
+                        >Very hard</b
+                      >
+                    </p>
+                    <a href="./q7.html" class="btn btn-primary"
+                      >Question</a
+                    >
+                  </div>
+                  <div class="square">
                     <h2>Palindromic addition</h2>
                     <p style="padding-bottom: 0%">
                       Input is denoted by an array of integers <b>P</b>.  
@@ -215,7 +232,7 @@
                         >Very hard</b
                       >
                     </p>
-                    <a href="./q7.html" class="btn btn-primary"
+                    <a href="./q8.html" class="btn btn-primary"
                       >Question</a
                     >
                   </div>
