--- a/q1.html
+++ b/q1.html
@@ -93,12 +93,12 @@
                     <br></br>
                     <h3 style="color: #FFF">Case 1</h3>
                     <code>
-                      Input: Input: nums = [4, 2, 6, 7, 11, 22883], Output: TEST
+                      Input: nums = [4, 2, 6, 7, 11, 22883]
                     </code>
                     <br></br>
                     <h3 style="color: #FFF">Case 2</h3>
                     <code>
-                      Input: nums = [2, 3, 3, 7, 11, 13, 37, 101, 9901], Output: KLCODING2026 
+                      Input: nums = [2, 3, 3, 7, 11, 13, 37, 101, 9901]
                     </code>
                     <br></br> 
                     <h3 style="color: #FFF">Case 3</h3>
